Invited speakers added

--- a/speakers.html
+++ b/speakers.html
@@ -217,6 +217,18 @@
                         </div>
                         </div>
                     </div>  
+                      <div class="container">
+                        <header class="section-header" >
+                            <h3>Invited Speakers</h3>
+                        </header>
+                        <div class="image-holder">
+                          <div>
+                            <img src="img/shyam_lal.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Dr. Shyam Lal</p>
+                            <p class="position">Associate Professor, National Institute of Technology Karnataka, Surathkal</p>
+                        </div>
+                        </div>
+                    </div>  
                         <br><br>
                         <div class="container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
                           <header class="section-header" style="width: 100%; text-align: center;">
