--- a/AuthorGuide.html
+++ b/AuthorGuide.html
@@ -99,7 +99,7 @@
                     <li class="menu-active"><a href="AuthorGuide.html">Author's Guidelines</a></li>
                 </ul>
             </li>
-            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li> -->
+            <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
 
             <!-- <li><a href="#">Workshops</a>
