--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -93,15 +93,15 @@
                             <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
-                    <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
+                  <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
 
-                    <li><a href="#">Workshops</a>
+                    <!-- <li><a href="#">Workshops</a>
                         <ul class="nav-dropdown">
                             <li><a href="smartcity.html">Smart City Stack workshop</a></li>
                             <li><a href="girlgeekhack.html">GirlGeekHack'23 (Mangalore Subsection Edition)</a></li>
                             <li><a href="studentcongress.html">CS Student Congress</a></li>
-                        </ul></li>-->
+                        </ul></li> -->
 
 
                     <li><a href="speakers.html">Speakers</a></li> 
