--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -126,7 +126,7 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>  -->
 
 
                     <li><a href="#">Workshops</a>
