--- a/accepted-papers.html
+++ b/accepted-papers.html
@@ -151,7 +151,7 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li> -->
+            <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
             <!-- <li>
               <a href="#">Workshops</a>
@@ -219,54 +219,13 @@
     <table class="center">
       <tr>
         <th>Paper ID</th>
-        <th>Paper Title</th>
+        <th style="text-align: center;">Paper Title</th>
         <th>Primary Subject Area</th>
       </tr>
       <tr>
-        <td>7</td>
-        <td>Empowering Accessibility: AI-driven Laser-Controlled Robotic Hand for Enhanced Independence
-        </td>
-        <td>Applications  </td>
-      </tr>
-      <tr>
-        <td>24</td>
-        <td>A DEEP LEARNING MODEL FOR ENHANCING FLOOD SEVERITY PREDICTION WITH RAINFALL DATA</td>
-        <td>Systems Research</td>
-    </tr>
-    <tr>
-        <td>43</td>
-        <td>Seamless Subaquatic Connectivity: Harnessing Li-Fi for Underwater Communication</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>47</td>
-        <td>A Multi-Condition Health Prediction Model Based on Machine Learning Algorithms</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>50</td>
-        <td>Agricultural Innovation: Crop Yield Forecasting  with AI</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>52</td>
-        <td>A Unique Spacy and TextBlob Bases NLP Approach For Financial Data Analysis</td>
-        <td>Foundational Research</td>
-    </tr>
-    <tr>
         <td>54</td>
         <td>Small Tumor-Aware Network for Brain MRI Image Segmentation</td>
         <td>Applications</td>
-    </tr>
-    <tr>
-        <td>74</td>
-        <td>Digital Transformation of Building Infrastructure: Advantages and Limitations</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>79</td>
-        <td>Automatic Lung Tumor Volume Estimation Using PSO-TSVM Method</td>
-        <td>Systems Research</td>
     </tr>
     <tr>
         <td>87</td>
@@ -285,7 +244,7 @@
     </tr>
     <tr>
         <td>95</td>
-        <td>Secured File Transmission for Printing using Wi-Fi</td>
+        <td>Secured File Transmission for Printing using Wi-Fi - PrintEnd</td>
         <td>Applications</td>
     </tr>
     <tr>
@@ -299,38 +258,18 @@
         <td>Applications</td>
     </tr>
     <tr>
-        <td>98</td>
-        <td>The Role of Big Data Analytics in Transformation of Accounting</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
         <td>99</td>
         <td>Automated Web Scraping For Telecom Corpus Application</td>
         <td>Foundational Research</td>
     </tr>
     <tr>
         <td>101</td>
-        <td>Power Density Prediction in PEM Fuel Cells Using  Semi-Supervised and Supervised Deep Learning  Algorithms</td>
+        <td>Power Density Prediction in PEM Fuel Cells using Semi-Supervised and Supervised Deep Learning Algorithms</td>
         <td>Applications</td>
-    </tr>
-    <tr>
-        <td>104</td>
-        <td>Employing Sequential CNN and Deep Learning Methodologies to Enhance Diagnostic Accuracy and Facilitate Early Detection of Skin Cancer</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>112</td>
-        <td>Generative AI for Kannada literature using Pandas AI</td>
-        <td>Foundational Research</td>
     </tr>
     <tr>
         <td>117</td>
         <td>Field Monitoring and Insect Detection</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>125</td>
-        <td>IoT-Driven Smart Farming with Machine Learning for Sustainable Food Systems</td>
         <td>Applications</td>
     </tr>
     <tr>
@@ -385,18 +324,8 @@
     </tr>
     <tr>
         <td>153</td>
-        <td>Multi-object Tracking using Deep Learning </td>
+        <td>Multi-object Tracking using Deep Learning</td>
         <td>Foundational Research</td>
-    </tr>
-    <tr>
-        <td>154</td>
-        <td>A Logistic Regression Analysis of Behavioural Patterns in Threat Responses Using Online Experimental Data</td>
-        <td>Foundational Research</td>
-    </tr>
-    <tr>
-        <td>157</td>
-        <td>Real Time Detection of Network Layer Attacks on IoT Devices using Machine Learning</td>
-        <td>Applications</td>
     </tr>
     <tr>
         <td>159</td>
@@ -409,34 +338,9 @@
         <td>Applications</td>
     </tr>
     <tr>
-        <td>163</td>
-        <td>Crop Recommendation System For Agricultural Decision-Making</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>174</td>
-        <td>Secure 5G Network Slicing for Location Tracking </td>
-        <td>Applications</td>
-    </tr>
-    <tr>
         <td>179</td>
         <td>Chat GPT and Cyber Risks: Need of Custom Large Language Models</td>
         <td>Applications</td>
-    </tr>
-    <tr>
-        <td>188</td>
-        <td>AI BOT: MENTAL HEATH DETECTION &amp; COUNSELLING</td>
-        <td>Applications</td>
-    </tr>
-    <tr>
-        <td>199</td>
-        <td>FPGA-based brain tumor detection and segmentation using image processing </td>
-        <td>Systems Research</td>
-    </tr>
-    <tr>
-        <td>205</td>
-        <td>Bone Age Assessment (BAA) Using Convolutional Transformer and MultiLayer Perceptron</td>
-        <td>Systems Research</td>
     </tr>
     <tr>
         <td>212</td>
@@ -454,16 +358,6 @@
         <td>Applications</td>
     </tr>
     <tr>
-        <td>223</td>
-        <td>Cyber Bullying Detection using Large Language Models</td>
-        <td>Foundational Research</td>
-    </tr>
-    <tr>
-        <td>224</td>
-        <td>Real-time Sign Language to Text Conversion using Deep Learning Models</td>
-        <td>Foundational Research</td>
-    </tr>
-    <tr>
         <td>229</td>
         <td>Maximizing the Prediction Accuracy of Needle Deflection by Random Forest through Bayesian Approach</td>
         <td>Applications</td>
@@ -479,13 +373,8 @@
         <td>Applications</td>
     </tr>
     <tr>
-        <td>232</td>
-        <td>Dimensionality Reduction in Classification: A Study on Predicting Lifestyle Wellbeing</td>
-        <td>Foundational Research</td>
-    </tr>
-    <tr>
         <td>235</td>
-        <td>Performance Analysis of Deep Architecture for Bharatanatyam  Face Emotion Recognition</td>
+        <td>Performance Analysis of Deep Architecture for Bharatanatyam Face Emotion Recognition</td>
         <td>Foundational Research</td>
     </tr>
     <tr>
@@ -520,7 +409,7 @@
     </tr>
     <tr>
         <td>244</td>
-        <td>YouTube Viralomics: A Scoring Framework by Analysing Engagement Metrics in the Indian Context</td>
+        <td>YouTube Viralomics: A Scoring Framework by Analyzing Engagement Metrics in the Indian Context</td>
         <td>Foundational Research</td>
     </tr>
     </table>
