--- a/speakers.html
+++ b/speakers.html
@@ -124,9 +124,9 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
+          <li><a href="Program-Schedule.html">Program Schedule</a></li> 
 
-            <li>
+            <!-- <li>
               <a href="#">Workshops</a>
               <ul class="nav-dropdown">
                 <li><a href="smartcity.html">Smart City Stack workshop</a></li>
@@ -215,6 +215,11 @@
                             <p class="commitee-names">B.S. Daya Sagar</p>
                             <p class="position">Professor and Head, Indian Statistical Institute, Bangalore</p>
                         </div>
+                        <div>
+                            <img src="img/venkatesh babu.jpg" width="250px" height="250px">
+                            <p class="commitee-names">R. Venkatesh Babu</p>
+                            <p class="position">Professor at Indian Institute of Science (IISc), Bangalore</p>
+                        </div>
                         </div>
                     </div>  
                       <div class="container">
@@ -226,6 +231,11 @@
                             <img src="img/shyam_lal.jpg" width="250px" height="250px">
                             <p class="commitee-names">Dr. Shyam Lal</p>
                             <p class="position">Associate Professor, National Institute of Technology Karnataka, Surathkal</p>
+                        </div>
+                          <div>
+                            <img src="img/nithin nagraj.jpg" width="250px" height="250px">
+                            <p class="commitee-names">Dr. Nithin Nagraj</p>
+                            <p class="position">Professor and Head, Complex Systems Programme, NIAS</p>
                         </div>
                         </div>
                     </div>  
@@ -276,6 +286,23 @@
                                   <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
                               </div>
                           </div>
+                          <div class="container">
+                            <header class="section-header" >
+                                <h3>Panelists</h3>
+                            </header>
+                            <div class="image-holder">
+                              <div>
+                                <img src="img/dilip.jpg" width="250px" height="250px">
+                                <p class="commitee-names">Dr. Dilip Kumar Dalei</p>
+                                <p class="position">Scientist at Defence Research and Development Organisation (DRDO)</p>
+                            </div>
+                              <div>
+                                <img src="img/sreekrishnan.jpeg" width="250px" height="250px">
+                                <p class="commitee-names">Sreekrishnan Venkateswaran </p>
+                                <p class="position">Kyndryl Fellow & CTO of Kyndryl India</p>
+                            </div>
+                            </div>
+                        </div>  
                       </div>                                         
                     </section>
                     <br>
