--- a/registration.html
+++ b/registration.html
@@ -125,9 +125,9 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
+             <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
-            <li>
+          <!-- </li>
               <a href="#">Workshops</a>
               <ul class="nav-dropdown">
                 <li><a href="smartcity.html">Smart City Stack workshop</a></li>
@@ -138,7 +138,7 @@
                 </li>
                 <li><a href="studentcongress.html">CS Student Congress</a></li>
               </ul>
-            </li> -->
+            </li>  -->
 
             <li><a href="speakers.html">Speakers</a></li>
             <li><a href="venue.html">Venue</a></li>
