One Panelist and Organizer updated

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -235,12 +235,17 @@
             <section id="agenda">
                 <div class="container">
                     <header class="section-header">
-                        <h3>Co-Organizing Chair</h3>
+                        <h3>Co-Organizing Chairs</h3>
                     </header>
                     <div class="image-holder">
                         <div>
                             <img src="img/mamta.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1089/" target="_blank"><p class="commitee-names">Mamatha H. R.</p></a>
+                            <p class="position">PES University, Bangalore, India</p>
+                        </div>
+                        <div>
+                            <img src="img/rex joseph.jpg"  class="org-img">
+                            <a href="https://staff.pes.edu/nm1008/" target="_blank"><p class="commitee-names">Rex Joseph</p></a>
                             <p class="position">PES University, Bangalore, India</p>
                         </div>
                     </div>
