--- a/speakers.html
+++ b/speakers.html
@@ -306,6 +306,13 @@
                                 <p class="commitee-names">Sreekrishnan Venkateswaran </p>
                                 <p class="position">Kyndryl Fellow & CTO of Kyndryl India</p>
                             </div>
+                              <div>
+                                <img src="img/lakshmi.jpeg" width="250px" height="250px">
+                                <p class="commitee-names">Lakshmi Jagarlamudi</p>
+                                <p class="position">Chief Research Scientist,  
+                                  Supercomputer Education And Research Centre,
+                                  IISc Bangalore</p>
+                            </div>
                             </div>
                         </div>  
                       </div>                                         
