--- a/speakers.html
+++ b/speakers.html
@@ -291,29 +291,45 @@
                                   <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
                               </div>
                           </div>
-                          <div class="container">
-                            <header class="section-header" >
-                                <h3>Panelists</h3>
-                            </header>
-                            <div class="image-holder">
-                              <div>
-                                <img src="img/dilip.jpg" width="250px" height="250px">
-                                <p class="commitee-names">Dr. Dilip Kumar Dalei</p>
-                                <p class="position">Scientist at Defence Research and Development Organisation (DRDO)</p>
-                            </div>
-                              <div>
-                                <img src="img/sreekrishnan.jpeg" width="250px" height="250px">
-                                <p class="commitee-names">Sreekrishnan Venkateswaran </p>
-                                <p class="position">Kyndryl Fellow & CTO of Kyndryl India</p>
-                            </div>
-                              <div>
-                                <img src="img/lakshmi.jpeg" width="250px" height="250px">
-                                <p class="commitee-names">Lakshmi Jagarlamudi</p>
-                                <p class="position">Chief Research Scientist,  
-                                  Supercomputer Education And Research Centre,
-                                  IISc Bangalore</p>
-                            </div>
-                            </div>
+                        <div class="container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+                          <header class="section-header" style="width: 100%; text-align: center;">
+                              <h3>Panelists</h3>
+                          </header>
+                          <div class="image-holder" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
+                              <div style="text-align: center;">
+                                  <img src="img/dilip.jpg" width="250px" height="250px">
+                                  <p class="commitee-names">Dr. Dilip Kumar Dalei</p>
+                                  <p class="position">Scientist at Defence Research and Development Organisation (DRDO)</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/sreekrishnan.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Sreekrishna Venkateswaran</p>
+                                  <p class="position">Kyndryl Fellow & CTO of Kyndryl India</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/lakshmi.jpeg" width="250px" height="250px">
+                                  <p class="commitee-names">Lakshmi Jagarlamudi</p>
+                                  <p class="position">Chief Research Scientist, <br> 
+                                    Supercomputer Education And Research Centre,
+                                    IISc Bangalore</p>
+                              </div>
+                              <div style="text-align: center;">
+                                  <img src="img/ramesh.jpg" width="250px" height="250px">
+                                  <p class="commitee-names">Ramesh Naidu L</p>
+                                  <p class="position">Scientist-F, Centre for Development of Advanced Computing (C-DAC)</p>
+                              </div>
+                          </div>
+                        <div class="container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
+                          <header class="section-header" style="width: 100%; text-align: center;">
+                              <h3>Moderator</h3>
+                          </header>
+                          <div class="image-holder" style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center;">
+                              <div style="text-align: center;">
+                                  <img src="img/souv.jpg" width="250px" height="250px">
+                                  <p class="commitee-names">Dr. Sourav Kanti Addya</p>
+                                  <p class="position">Assistant Professor, NITK Suratkal</p>
+                              </div>
+                          </div>
                         </div>  
                       </div>                                         
                     </section>
