industry session details updated

--- a/speakers.html
+++ b/speakers.html
@@ -290,7 +290,22 @@
                                   <p class="commitee-names" style="font-size: 1.2rem; margin: 5px 0;">Senthil Raja</p>
                                   <p class="position">R&D Centre, Hitachi India Pvt Ltd.</p>
                               </div>
-                          </div>
+                              <div class="speakers-button-container">
+                                <a href="session_1_hitachi.html" 
+                                   target="_blank"
+                                   class="speakers-button"
+                                   style="color: white;"
+                                   class="schedule-button">
+                                    Click here to know more about Industry Session-1 <br>(by Hitachi)
+                                </a>
+                                <a href="session_3_ericsson.html" 
+                                   target="_blank"
+                                   class="speakers-button"
+                                   style="color: white;">
+                                   Click here to know more about Industry Session-3 <br>(by Ericsson Research)
+                                </a>
+                              </div>
+                            </div>
                         <div class="container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
                           <header class="section-header" style="width: 100%; text-align: center;">
                               <h3>Panelists</h3>
