Hitachi session abstract added

--- a/speakers.html
+++ b/speakers.html
@@ -298,6 +298,13 @@
                                    class="schedule-button">
                                     Click here to know more about Industry Session-1 <br>(by Hitachi)
                                 </a>
+                                <a href="session_2.html" 
+                                   target="_blank"
+                                   class="speakers-button"
+                                   style="color: white;"
+                                   class="schedule-button">
+                                    Click here to know more about Industry Session-2 <br>(by Nokia)
+                                </a>
                                 <a href="session_3_ericsson.html" 
                                    target="_blank"
                                    class="speakers-button"
@@ -342,7 +349,7 @@
                               <div style="text-align: center;">
                                   <img src="img/souv.jpg" width="250px" height="250px">
                                   <p class="commitee-names">Dr. Sourav Kanti Addya</p>
-                                  <p class="position">Assistant Professor, NITK Suratkal</p>
+                                  <p class="position">Assistant Professor, NITK Surathkal</p>
                               </div>
                           </div>
                         </div>  
