--- a/session_1_hitachi.html
+++ b/session_1_hitachi.html
@@ -52,63 +52,85 @@
       }
 
       .table-container {
-  overflow-x: auto;
-}
+        overflow-x: auto;
+      }
 
-table {
-margin: auto;
-  width: 80%;
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-th,
-td {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
+      table {
+        margin: auto;
+        width: 80%;
+        border-collapse: collapse;
+        border-spacing: 0;
+      }
+      th,
+      td {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
 
-th {
-  background-color: #f2f2f2;
-  font-weight: bold;
-}
+      th {
+        background-color: #f2f2f2;
+        font-weight: bold;
+      }
 
-@media only screen and (max-width: 768px) {
-  table {
-    border: 0;
-  }
-  
-  table thead {
-    display: none;
-  }
-  
-  table, table tbody, table tr, table td {
-    display: block;
-    width: 100%;
-  }
-  
-  table tr {
-    margin-bottom: 15px;
-  }
-  
-  table td {
-    text-align: right;
-    padding-left: 50%;
-    text-align: right;
-    position: relative;
-  }
-  
-  table td::before {
-    content: attr(data-label);
-    position: absolute;
-    left: 0;
-    width: 50%;
-    padding-left: 15px;
-    font-weight: bold;
-    text-align: left;
-  }
-}
+      @media only screen and (max-width: 768px) {
+        table {
+          border: 0;
+        }
 
+        table thead {
+          display: none;
+        }
+
+        table,
+        table tbody,
+        table tr,
+        table td {
+          display: block;
+          width: 100%;
+        }
+
+        table tr {
+          margin-bottom: 15px;
+        }
+
+        table td {
+          text-align: right;
+          padding-left: 50%;
+          text-align: right;
+          position: relative;
+        }
+
+        table td::before {
+          content: attr(data-label);
+          position: absolute;
+          left: 0;
+          width: 50%;
+          padding-left: 15px;
+          font-weight: bold;
+          text-align: left;
+        }
+      }
+      .row-abs {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .col-abs {
+        display: flex;
+        flex-direction: column;
+        margin-left: 33px;
+    }
+    
+    @media (max-width: 768px) {
+        .row-abs, .col-abs {
+            flex-direction: column;
+        }
+        .col-abs {
+          margin-top: 20px;
+          margin-left: 0;
+      }
+    }
     </style>
   </head>
 
@@ -191,7 +213,7 @@ th {
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-          <li><a href="Program-Schedule.html">Program Schedule</a></li> 
+            <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
             <!-- <li>
               <a href="#">Workshops</a>
@@ -234,7 +256,9 @@ th {
           <div class="col-md-12">
             <div class="row">
               <div class="col-md-6">
-                <h1 class="banner-header">Industry Session-1 by Hitachi India</h1>
+                <h1 class="banner-header">
+                  Industry Session-1 by Hitachi India
+                </h1>
               </div>
               <div class="col-md-6">
                 <p class="banner-nav">
@@ -245,7 +269,9 @@ th {
                   /><br />
                   <span class="banner-box">
                     <a href="index.html">Home</a>
-                    <a href="session_1_hitachi.html">Industry Session-1 by Hitachi India</a>
+                    <a href="session_1_hitachi.html"
+                      >Industry Session-1 by Hitachi India</a
+                    >
                   </span>
                 </p>
               </div>
@@ -256,12 +282,27 @@ th {
     </section>
     <!-- Banner Section end -->
     <div class="row">
-
       <p class="para">
-          <b style="font-size: 30px; text-align: center; display: block;">Abstract of the Workshop</b><br />
-          As AI technologies advance, industries are harnessing breakthroughs in vision, speech, language, and optimization to develop intelligent, transformative solutions. This session will showcase innovative work addressing critical challenges in deploying AI across diverse industrial applications. Key topics include real-time AI inference for enhanced operational efficiency, advanced speaker identification for secure authentication, AI-driven safety protocols that minimize industrial risks. Additionally, AI-based  optimization techniques for energy management will be highlighted, focusing on strategies for reducing costs and environmental impacts. Each team will share insights into overcoming unique challenges—ranging from scaling inference systems to meeting stringent safety standards—and present cutting-edge technologies developed to address these issues. Through this exploration of practical complexities and achievements in industrial AI, the session aims to inspire further innovation and cross-industry collaboration.
-      </p> 
-      <br><br><br>    
+        <b style="font-size: 30px; text-align: center; display: block"
+          >Abstract of the Workshop</b
+        ><br />
+        As AI technologies advance, industries are harnessing breakthroughs in
+        vision, speech, language, and optimization to develop intelligent,
+        transformative solutions. This session will showcase innovative work
+        addressing critical challenges in deploying AI across diverse industrial
+        applications. Key topics include real-time AI inference for enhanced
+        operational efficiency, advanced speaker identification for secure
+        authentication, AI-driven safety protocols that minimize industrial
+        risks. Additionally, AI-based optimization techniques for energy
+        management will be highlighted, focusing on strategies for reducing
+        costs and environmental impacts. Each team will share insights into
+        overcoming unique challenges—ranging from scaling inference systems to
+        meeting stringent safety standards—and present cutting-edge technologies
+        developed to address these issues. Through this exploration of practical
+        complexities and achievements in industrial AI, the session aims to
+        inspire further innovation and cross-industry collaboration.
+      </p>
+      <br /><br /><br />
       <!-- <p class="para">
        <b style="font-size: 30px;">Tentative Content</b><br>
        <div class="table-container">
@@ -302,28 +343,136 @@ th {
             </tbody>
           </table>
         </div>
-      </p> -->  
+      </p> -->
       <br />
-      <!-- <p class="para">
-          <b style="font-size: 30px; text-align: center; display: block;">Biography - Speakers</b><br />
-          <span style="visibility: hidden;">Advanced 5G and 6G use cases bring in new concepts such as AI-native cellular architectures and AI-based radio protocols.:</span>
-      </p> 
+      <p class="para">
+        <b style="font-size: 30px; text-align: center; display: block"
+          >Biography - Speakers</b
+        ><br />
+        <span style="visibility: hidden"
+          >Advanced 5G and 6G use cases bring in new concepts such as AI-native
+          cellular architectures and AI-based radio protocols.:</span
+        >
+      </p>
       <div class="bios">
+        <div class="speaker-card">
+          <h3>Manikandan Ravikiran</h3>
+          <img src="img/manikandan.jpeg" alt="Manikandan Ravikiran" />
+          <p class="bio">
+            Manikandan is a Researcher working at Computer Vision Research Group
+            at R&D Centre, Hitachi India to better understand how to improve
+            software products across multiple areas including ADAS, Healthcare
+            and Safety using Artificial Intelligence and Computer Vision. His
+            expertise includes development and implementation of efficient
+            mathematical algorithms for large scale AI analytics and devising
+            scalable solutions to complex AI problems. He obtained his Master’s
+            from Georgia Institute of Technology in Machine learning and
+            Interactive Intelligence with focus on NLP and its application for
+            low resource languages. He is the winner of ACL 2023, outstanding
+            reviewer award. <br />
+            <br />In the past, he was a visiting researcher at the DeLTA Lab,
+            Dept of CSE at IIT-Kanpur. He has served in Program Committee of
+            IEEE ICDDS, ACM ICMR, ACL, NAACL, EMNLP, COLING, Springer Language
+            Resources and Evaluation Journal (LRE), ACM Transactions on Asian
+            and Low-Resource Language Information Processing (TALLIP), Journal
+            of Experimental and Theoretical Artificial Intelligence (JETAI) and
+            Elsevier Journal of Engineering Applications of Artificial
+            Intelligence (EAAI). In the past he has also co-organized workshops
+            including Workshop on Cross Modal Learning (WCRML 2019) at ACM ICMR,
+            shared task on Offensive Span Identification at Second and Third
+            Workshop on Speech and Language Technologies for Dravidian Languages
+            (2022, 2023), Constraint Workshop (IEEE ICMLA, IEEE Bigdata).
+          </p>
+        </div>
+        <div class="speaker-card">
+          <h3>Ananth Ganesh</h3>
+          <img src="img/ananth.jpeg" alt="Ananth Ganesh" />
+          <p class="bio">
+            Ananth Ganesh is the Deputy General Manager working at the Computer
+            Vision Research Group at R&D Centre, Hitachi India solving problems
+            in the areas of Electric Vehicles, Automotive & Manufacturing and
+            Speech Processing for Vernacular AI systems. He has extensive
+            industry experience spanning over two decades with works on object
+            detection, segmentation, GANs and edge computing.
+            <br /><br />Earlier he was the Principal Data Scientist & Practice
+            Area Leader (AI & Analytics) at IBM and worked on building solutions
+            in vision, speech & NLP domains across multiple industrial use
+            cases. He served in the IAF for more than two decades working on
+            speech software development for avionics systems and leading
+            software development for Next Generation Fighter platforms.<br /><br />
+            He has completed his MTech (Computer Science & Engineering) from IIT
+            Madras and MSc from Madras University. He has presented multiple
+            papers in IEEE ICMLA, IEEE Bigdata, ICPR, Aerospace Journal,
+            Aeronautics Society of India.
+          </p>
+        </div>
+        <div class="row-abs">
+
           <div class="speaker-card">
-              <h3>Dr. Ajay Kattepur</h3>
-              <img src="img/ajay.jpg" alt="Dr. Ajay Kattepur">
-              <p class="bio">
-                  Dr. Ajay Kattepur is a Senior Researcher in the Autonomous Intelligent Systems group at Ericsson Research, with a focus on applying AI planning, reinforcement learning and formal modeling techniques towards 5G/6G network automation. Prior to joining Ericsson Research, he was with the Tata Consultancy Services (TCS) Research & Innovation Labs in India. Ajay received his Ph.D. in Computer science from French National Institute for Computer Science and Control (Inria), Rennes, France, and the M.Eng. and B.Eng. degrees in Electrical & Electronic Engineering from Nanyang Technological University (NTU) Singapore. 
-              </p>
+            <h3>Nilanjan Chakrovorthy</h3>
+            <img src="img\Nilanjan .jpg" alt="Nilanjan Chakrovorthy" />
+            <p class="bio">
+              Nilanjan Chakravortty is a seasoned professional with over 35 years
+              of experience, including more than a decade specializing in
+              Artificial Intelligence (AI) and Machine Learning (ML). He currently
+              leads AI Research and Development at Hitachi India, where he has
+              driven transformative projects using advanced techniques like deep
+              learning, neural networks, and Generative AI. His work in this area
+              includes innovative applications such as fault tree analysis for
+              industrial equipment, leveraging technologies like Chain of
+              Thoughts, Graph of Thoughts, and Retrieval Augmented Generation
+              (RAG). <br /><br />Mr. Chakravortty has also made significant
+              contributions to optimizing large multimodal models, driving
+              innovation across sectors such as manufacturing, banking, and
+              Intelligent Transportation Systems. <br /><br />In addition to his
+              role at Hitachi, Mr. Chakravortty has extensive experience with
+              renowned companies like IBM, where he led global projects focused on
+              cognitive digitization. His work applied AI and ML to solve complex
+              business challenges, particularly for clients in banking and
+              manufacturing. Over the years, he has held leadership roles in
+              various organizations, playing a pivotal role in developing
+              solutions for smart cities, IoT, and industrial automation.
+              <br /><br />His deep expertise also extends to Healthcare IT, where
+              he has worked on diagnostic solutions and IoT-based medical devices.
+              Mr. Chakravortty is recognized as a thought leader in AI, frequently
+              invited to speak at industry forums on the impact of AI and its role
+              in driving social innovations
+            </p>
           </div>
-          <div class="speaker-card">
-              <h3>Dr. Prayag Gowgi</h3>
-              <img src="img/prayag_gowgi.jpeg" alt="Dr. Prayag Gowgi">
+          <div class="col-abs">
+            <div class="speaker-card">
+              <h3>Dr. Senthil Raja</h3>
+              <img src="img\sentil.jpeg" alt="Dr. Senthil Raja" />
               <p class="bio">
-                  Dr. Prayag Gowgi received the B.E. degree in electronics and communication engineering from the P. E. S. College of Engineering, Mandya, India, in 2009, the M.Tech. degree in digital communication engineering from the R. V. College of Engineering, Bengaluru, India, in 2011, and the Ph.D. degree from the Indian Institute of Science at Bengaluru, in 2019. He is currently working as a Senior Research Engineer with Ericsson Research AI, Bengaluru. His research interests include neural networks, signal processing, nonlinear optimization, spatio-temporal self-organizing maps, and mathematical biology. 
+                Dr. Senthil is a chief researcher at R&D Center, Hitachi India Pvt
+                Ltd, with specialty in speech and signal processing. His research
+                interest are broadly in speech processing, signal processing and
+                vernacular language analysis. Earlier he was part of Qualcomm
+                research working on noise sensor and noise cancellation technology
+                with numerous patents.
               </p>
+            </div> <br> <br>
+            <div class="speaker-card">
+              <h3>Sheetal Kumar</h3>
+              <img src="img\sheetal.jpeg" alt="Sheetal Kumar" />
+              <p class="bio">
+                Sheetal Kumar K R is a Senior Research Engineer at HITACHI INDIA
+                PVT. LTD. He earned a Bachelor of Engineering (B.E.) in
+                Environmental Engineering from Sri Jayachamarajendra College of
+                Engineering, Mysore, and completed both his Master of Engineering
+                (M.E.) and Ph.D. in Civil and Environmental Engineering at the
+                Indian Institute of Science, Bangalore.
+                <br />
+                <br />
+                After completing his B.E., he worked as an Assistant Engineer at
+                Tata Consulting Engineers in Mumbai. Following his M.E., he served
+                as a Technical Associate at the Robert Bosch Center for
+                Cyber-Physical Systems (RBCCPS).
+              </p>
+            </div>
           </div>
-      </div>         -->
+        </div>
+      </div>
       <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
       <br /><br />
     </div>
